--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ nav a {
     object-fit: cover;
 }
 
-.product .btn {
+ .btn {
     background-color: #a67b5b;
     color: white;
     padding: 0.5rem 1rem;
