--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ nav a {
 }
 
 .hero {
+    display: flex;
+    flex-direction: row;
     text-align: center;
     padding: 5rem 2rem;
     background-color: #f2e6d9;
