--- a/style.css
+++ b/style.css
@@ -49,8 +49,7 @@ nav a {
     display: inline-block;
 }
 .sobre{
-    display: flex;
-    align-items: center;
+text-align: center;
 height:750px;
 
 
